src/test/deca/syntax/invalid/main/test_main_without_close_brace.deca
// Description:
//    tests de programme syntactiquement incorrects : pas de crochet fermante
//
// Resultats:
//    Ligne 11 : missing '}' at '<EOF>'
//
// Historique:
//    cree le 01/01/2024

{
    println("test");